force-app/main/default/objects/SFDC_Strategy__c/SFDC_Strategy__c.object-meta.xml
<CustomObject>
    <description>Specific set of strategies tied to each account that the sales manager needs to executive.  Each strategy lists specific revenue goals and products to be sold to a particular division or department.  Tasks and milestones are also attached to each strategy.</description>
    <label>Tactic</label>
    <nameField>
        <label>Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>