force-app/main/default/objects/SFDC_Strategy__c/fields/Est_Comp_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Comp_Date__c</fullName>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>