force-app/main/default/objects/SFDC_Strategy__c/fields/Estimated_Service_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Service_Revenue__c</fullName>
    <label>Estimated Service Revenue</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>