force-app/main/default/objects/SFDC_Strategy__c/fields/Estimated_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Total_Revenue__c</fullName>
    <formula>Estimated_Product_Revenue__c  +  Estimated_Service_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>