force-app/main/default/objects/SFDC_Strategy__c/fields/SFDC_Acct_Plan__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Acct_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>SFDC_Acct_Plan__c</referenceTo>
    <relationshipName>R00N60000001PRPWEA4</relationshipName>
    <type>Lookup</type>
</CustomField>